--- a/app/src/main/res/layout/content_nearact.xml
+++ b/app/src/main/res/layout/content_nearact.xml
@@ -1,138 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="401dp"
-        android:layout_height="417dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
-
-        <fragment
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.MapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-
-    <!--    tools:context="com.example.givemepass.edittextdemo.nearact">-->
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="408dp"
-        android:layout_height="59dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        map:layout_constraintEnd_toEndOf="parent"
+        map:layout_constraintStart_toStartOf="parent"
+        map:layout_constraintTop_toTopOf="parent">
 
-        <include layout="@layout/bottom_bar" />
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="659dp" />
+
+        <include
+            layout="@layout/bottom_bar"
+            android:layout_width="match_parent"
+            android:layout_height="74dp" />
     </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="413dp"
-        android:layout_height="55dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
-
-        <Button
-            android:id="@+id/activitybtn"
-            android:layout_width="80dp"
-            android:layout_height="55dp"
-            android:layout_weight="1"
-            android:background="@drawable/selectactbtn"
-            android:text="@string/activity"
-            android:textSize="16dp" />
-
-        <Button
-            android:id="@+id/joinbtn"
-            android:layout_width="82dp"
-            android:layout_height="55dp"
-            android:layout_weight="1"
-            android:background="@drawable/selectactbtn"
-            android:text="@string/join"
-            android:textSize="16dp" />
-
-        <Button
-            android:id="@+id/holdonbtn"
-            android:layout_width="70dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/selectactbtn"
-            android:text="@string/holdon"
-            android:textSize="16dp" />
-
-        <Button
-            android:id="@+id/nearactbtn"
-            android:layout_width="69dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/selectactbtn"
-            android:text="@string/nearact"
-            android:textSize="16dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="453dp"
-        android:layout_height="183dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.02"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="266dp"
-            android:layout_height="129dp">
-
-            <EditText
-                android:id="@+id/editsuffer"
-                android:layout_width="164dp"
-                android:layout_height="44dp"
-                android:layout_marginStart="103dp"
-                android:layout_marginLeft="103dp"
-                android:layout_marginTop="86dp"
-                android:background="@drawable/outside"
-                android:ems="10"
-                android:inputType="textPersonName"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="104dp"
-            android:layout_height="127dp">
-
-            <Button
-                android:id="@+id/button16"
-                android:layout_width="45dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="82dp"
-                android:layout_marginEnd="59dp"
-                android:layout_marginRight="59dp"
-                android:background="@drawable/p5"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
