--- a/app/src/main/res/drawable/selectactbtn.xml
+++ b/app/src/main/res/drawable/selectactbtn.xml
@@ -6,4 +6,8 @@
     <item
         android:state_pressed="true"
         android:drawable="@drawable/p2"/>
+    <item
+        android:state_focused="true"
+        android:drawable="@drawable/p2"/>
+
 </selector>
