--- a/app/src/main/res/layout/content_allactivity.xml
+++ b/app/src/main/res/layout/content_allactivity.xml
@@ -168,22 +168,27 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="177dp"
+                    android:layout_width="396dp"
+                    android:layout_height="160dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/textView59"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
                     <Button
                         android:id="@+id/gogo"
-                        android:layout_width="160dp"
-                        android:layout_height="145dp"
+                        android:layout_width="151dp"
+                        android:layout_height="138dp"
                         android:background="@drawable/head" />
 
                     <TextView
                         android:id="@+id/textView33"
-                        android:layout_width="wrap_content"
+                        android:layout_width="211dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:text="@string/actcontenct"
                         android:textSize="18sp" />
                 </LinearLayout>
@@ -215,8 +220,8 @@
 
                     <Button
                         android:id="@+id/wantjoin"
-                        android:layout_width="66dp"
-                        android:layout_height="67dp"
+                        android:layout_width="60dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:background="@drawable/p11" />
 
@@ -228,7 +233,7 @@
 
                     <Button
                         android:id="@+id/comment"
-                        android:layout_width="49dp"
+                        android:layout_width="47dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:background="@drawable/p10" />
@@ -241,21 +246,28 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="159dp"
+                    android:layout_width="399dp"
+                    android:layout_height="158dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/textView61"
+                        android:layout_width="54dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="       " />
+
                     <Button
                         android:id="@+id/gotosignup"
-                        android:layout_width="160dp"
-                        android:layout_height="145dp"
+                        android:layout_width="151dp"
+                        android:layout_height="129dp"
                         android:background="@drawable/head" />
 
                     <TextView
                         android:id="@+id/actcontent2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_width="217dp"
+                        android:layout_height="79dp"
                         android:text="@string/actcontenct"
                         android:textSize="18sp" />
 
@@ -289,8 +301,8 @@
 
                     <Button
                         android:id="@+id/applycounts"
-                        android:layout_width="32dp"
-                        android:layout_height="66dp"
+                        android:layout_width="20dp"
+                        android:layout_height="65dp"
                         android:layout_weight="1"
                         android:background="@drawable/p11" />
 
