--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -15,8 +15,8 @@
         android:layout_height="match_parent" />
 
 
-    <!--    <com.google.android.material.navigation.NavigationView-->
-<!--        android:id="@+id/nav_view"-->
+<!--        <com.google.android.material.navigation.NavigationView-->
+<!--        android:id="@+id/nav_iew"-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="match_parent"-->
 <!--        android:layout_gravity="start"-->
