--- a/app/src/main/res/layout/content_allactivity.xml
+++ b/app/src/main/res/layout/content_allactivity.xml
@@ -30,7 +30,7 @@
         <LinearLayout
             android:id="@+id/linearLayout3"
             android:layout_width="453dp"
-            android:layout_height="183dp"
+            android:layout_height="90dp"
             android:orientation="horizontal">
 
             <EditText
@@ -39,7 +39,7 @@
                 android:layout_height="45dp"
                 android:layout_marginStart="91dp"
                 android:layout_marginLeft="91dp"
-                android:layout_marginTop="82dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="18dp"
                 android:background="@drawable/outside"
                 android:inputType="text" />
@@ -52,7 +52,7 @@
                     android:id="@+id/button16"
                     android:layout_width="45dp"
                     android:layout_height="48dp"
-                    android:layout_marginTop="82dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="59dp"
                     android:layout_marginRight="59dp"
                     android:background="@drawable/p5"
@@ -62,52 +62,6 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayout4"
-            android:layout_width="413dp"
-            android:layout_height="55dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/activitybtn"
-                android:layout_width="80dp"
-                android:layout_height="55dp"
-                android:layout_weight="1"
-                android:background="@drawable/p2"
-                android:onClick="onClick"
-                android:text="@string/activity"
-                android:textSize="16dp" />
-
-            <Button
-                android:id="@+id/joinbtn"
-                android:layout_width="82dp"
-                android:layout_height="55dp"
-                android:layout_weight="1"
-                android:background="@drawable/selectactbtn"
-                android:onClick="onClick"
-                android:text="@string/join"
-                android:textSize="16dp" />
-
-            <Button
-                android:id="@+id/holdonbtn"
-                android:layout_width="70dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/selectactbtn"
-                android:onClick="onClick"
-                android:text="@string/holdon"
-                android:textSize="16dp" />
-
-            <Button
-                android:id="@+id/nearactbtn"
-                android:layout_width="69dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/selectactbtn"
-                android:text="@string/nearact"
-                android:textSize="16dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -158,133 +112,15 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/linearLayout6"
-            android:layout_width="422dp"
-            android:layout_height="447dp"
-            android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="474dp"
+            android:orientation="vertical">
 
-            <ScrollView
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteTextView"
                 android:layout_width="match_parent"
-                android:layout_height="444dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="399dp"
-                        android:layout_height="158dp"
-                        android:layout_weight="1"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/gotosignup"
-                            android:layout_width="151dp"
-                            android:layout_height="129dp"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginTop="20dp"
-                            android:background="@drawable/head" />
-
-                        <TextView
-                            android:id="@+id/actcontent2"
-                            android:layout_width="217dp"
-                            android:layout_height="79dp"
-                            android:text="@string/actcontenct"
-                            android:textSize="18sp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="395dp"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/likebtn"
-                            android:layout_width="33dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="50dp"
-                            android:layout_marginRight="30dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/p12" />
-
-                        <Button
-                            android:id="@+id/applycounts"
-                            android:layout_width="28dp"
-                            android:layout_height="68dp"
-                            android:layout_marginRight="30dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/p11" />
-
-                        <Button
-                            android:id="@+id/talkbtn"
-                            android:layout_width="40dp"
-                            android:layout_height="68dp"
-                            android:layout_marginRight="40dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/p10" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="396dp"
-                        android:layout_height="160dp"
-                        android:layout_weight="1"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/gogo"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginTop="20dp"
-                            android:layout_width="151dp"
-                            android:layout_height="138dp"
-                            android:background="@drawable/head" />
-
-                        <TextView
-                            android:id="@+id/textView33"
-                            android:layout_width="211dp"
-                            android:layout_height="wrap_content"
-                            android:text="@string/actcontenct"
-                            android:textSize="18sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="67dp"
-                        android:layout_weight="1"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/likeit"
-                            android:layout_width="12dp"
-                            android:layout_height="67dp"
-                            android:layout_marginLeft="50dp"
-                            android:layout_marginRight="30dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/p12" />
-
-                        <Button
-                            android:id="@+id/wantjoin"
-                            android:layout_width="4dp"
-                            android:layout_height="match_parent"
-                            android:layout_marginRight="30dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/p11" />
-
-                        <Button
-                            android:id="@+id/comment"
-                            android:layout_width="12dp"
-                            android:layout_height="match_parent"
-                            android:layout_marginRight="50dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/p10" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-            </ScrollView>
-
+                android:layout_height="345dp"
+                android:text="AutoCompleteTextView" />
         </LinearLayout>
 
         <LinearLayout
