--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -86,7 +86,7 @@ android:orientation="vertical">
                 android:gravity="center" />
 
             <Button
-                android:id="@+id/btn_to_friendpage"
+                android:id="@+id/btn_to_notice"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:background="@android:color/transparent"
@@ -109,7 +109,7 @@ android:orientation="vertical">
                 android:layout_height="70dp"
                 android:background="@android:color/transparent"
                 android:gravity="center"
-                android:text="@string/setting_page"
+                android:text="@string/message_page"
                 android:textSize="25sp" />
 
         </LinearLayout>
