--- a/app/src/main/res/layout/content_createact.xml
+++ b/app/src/main/res/layout/content_createact.xml
@@ -228,10 +228,17 @@
 
                 <ImageView
                     android:id="@+id/imageView26"
-                    android:layout_width="238dp"
+                    android:layout_width="52dp"
                     android:layout_height="44dp"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/ic_menu_gallery" />
+
+                <Button
+                    android:id="@+id/submitimg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="上傳" />
 
             </LinearLayout>
 
